@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22609: Constructors and update methods of mapping classes in the
+  collections module now accept the self keyword argument.
+
 
 What's New in Python 2.7.9 release candidate 1?
 ===============================================
